Closed Bug 336217 Opened 18 years ago Closed 18 years ago

Display error dialogue at launch on 10.2.x

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.5

People

(Reporter: alqahira, Assigned: froodian)

References

()

Details

(Keywords: fixed1.8.1)

Attachments

(1 file, 2 obsolete files)

There are starting to be a few reports out there that the "legions" of 10.2.x users are downloading 1.8-branch and trunk builds and trying to use them.  We need to update our existing check/warning (mxr above) to check for 10.3 instead of 10.2.
Changes the gestalt value to check against and the comment.

Also requires a change in Localizable.strings:

"RequiredVersionNotMet" = "%@ requires Mac OS X 10.3 or higher.";

I don't have a 10.2 to test on, but this is a "redonkulously simple" patch that literally changes 2 characters ;)
Attachment #220485 - Flags: review?(mozilla)
Comment on attachment 220485 [details] [diff] [review]
We require 10.3 now on 1.8 and Trunk; stop/warn 10.2 folks

r=me; heh.
Attachment #220485 - Flags: review?(mozilla) → review+
Comment on attachment 220485 [details] [diff] [review]
We require 10.3 now on 1.8 and Trunk; stop/warn 10.2 folks

mento, care to sr this?  I did rebuild and make sure 10.3.9 still works ;)
Attachment #220485 - Flags: superreview?(mark)
Whiteboard: [needs localizable.strings change in comment 1]
Comment on attachment 220485 [details] [diff] [review]
We require 10.3 now on 1.8 and Trunk; stop/warn 10.2 folks

This is fine, BUT:

If, when we move to the 10.3 SDK, we also set the deployment target to 10.3 (and possibly even if we don't set the deployment target), the app will fail to launch due to unresolved symbols (abort from dyld) before init is ever called.
Attachment #220485 - Flags: superreview?(mark) → superreview+
Can we use the Info.plist key LSMinimumSystemVersion? I can't remember if it works on 10.2 or later, or if it's 10.3 or later.
Well, for the moment this will stop 10.2 folks, so I think we should land it, and then do whatever else we need to do when we switch SDKs :)
Whiteboard: [needs localizable.strings change in comment 1] → [needs localizable.strings change in comment 1][needs checkin]
(In reply to comment #5)
> Can we use the Info.plist key LSMinimumSystemVersion? I can't remember if it
> works on 10.2 or later, or if it's 10.3 or later.

I saw tonight that SpamSieve's Info.plist had that key and it was set to 10.2, FWIW.

Does that method display an OS-generated dialogue before we get to the problems in  comment 4?
On 10.2, with LSMinimumSystemVersion set to 10.3, an attempt to launch results in the system displaying the dialog:

"The application cannot be launched because this system is incompatible. [OK]"

We can use LSMinimumSystemVersion and get rid of (or #if 0) the in-app check.

When we obsolete 10.3, we can't rely on LSMinimumSystemVersion.  The system respects that key and prevents the app from launching, but doesn't provide any useful user feedback.
Whiteboard: [needs localizable.strings change in comment 1][needs checkin]
Someone who actually handles code should take this now.  Said person might also be interested in fixing bug 336221.
Assignee: alqahira → nobody
Attached patch Uses LSMinimumSystemVersion (obsolete) — Splinter Review
This uses the LSMinimumSystemVersion key and #if 0's the existing code, since we'll need something like it once we're 10.4+
Assignee: nobody → stridey
Status: NEW → ASSIGNED
Attachment #225798 - Flags: review?(mark)
Comment on attachment 225798 [details] [diff] [review]
Uses LSMinimumSystemVersion

> 	<key>CFBundleExecutable</key>
> 	<string>Camino</string>
>+    <key>LSMinimumSystemVersion</key>
>+    <string>10.3</string>
> 	<key>CFBundleGetInfoString</key>
> 	<string>Camino 1.2+, © 1998-2006 Contributors</string>

This is one of the few times you should use tabs, because xml-text plists conventionally use tabs, and because that's what the Xcode UI saves.

Also by convention, the keys in Info.plist are sorted alphabetically.  LSMinimumSystemVersion should follow CFBundleVersion.
Attachment #225798 - Flags: review?(mark) → review-
Attachment #225798 - Attachment is obsolete: true
Attachment #225800 - Flags: review?(mark)
Comment on attachment 225800 [details] [diff] [review]
Like the last one, but done right

>Index: src/application/MainController.mm
>+#if 0 //An updated version of this will be needed again once we're 10.4+ (See Bug 336217)

#if 0 and the comment should be on separate lines, but it's close enough, so r+ and this change is OK to make on checkin.
Attachment #225800 - Flags: review?(mark) → review+
Whiteboard: [needs checkin]
Fixed trunk and 1.8 branch
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Whiteboard: [needs checkin]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: