Fix bug 336217, Display error dialogue at launch on 10.2.x. r=Wevah, sr=mento. Patch by froodiantherapy <stridey@gmail.com>.